[gd_scene load_steps=5 format=2]

[ext_resource path="res://interface/themes/grey_theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/theme/DefaultOptionFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://special_scenes/option_screen/OptionButton.gd" type="Script" id=3]
[ext_resource path="res://interface/UITooltip.tscn" type="PackedScene" id=4]

[node name="NavigatorButton" type="Button" groups=[
"UI_Navigator",
]]
margin_top = 216.0
margin_right = 445.0
margin_bottom = 266.0
rect_min_size = Vector2( 0, 50 )
theme = ExtResource( 1 )
custom_fonts/font = ExtResource( 2 )
text = "SADA"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
tooltip = "whhhh"
title = "sada"

[node name="Tooltip" parent="." instance=ExtResource( 4 )]
visible = false
position = Vector2( 495, 25 )
tooltip_text = "whhhh"

[connection signal="focus_entered" from="." to="." method="_on_NavigatorButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_NavigatorButton_focus_exited"]
[connection signal="pressed" from="." to="." method="_on_Controls_pressed"]
